--- a/Assignment4/PyHDBSCAN/MST_Generator.Rmd
+++ b/Assignment4/PyHDBSCAN/MST_Generator.Rmd
@@ -3,12 +3,13 @@ library(dbscan)
 ## compare on moons data
 data("moons")
 DATA_SIZE <- 14
-MCS = 2
+MCS = 3
 Labels <- 1:DATA_SIZE
 
 table <- moons[1:DATA_SIZE,]
 cl <- dbscan::hdbscan(table, minPts = MCS)
 # print the Hierarchical Diagram
+dev.new(width=50, height=150, unit="in")
 plot(cl$hc)
 # print the points
 plot(table, col=cl$cluster+1, pch=20, cex = 1.9)
@@ -52,6 +53,3 @@ text(table[,1]+0.08, table[,2]+0.008, labels = Labels)
 ```
 
 \
-
-```{}
-```
